--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,10 @@ nav a {
     padding: 20px;
     gap: 10px;
 }
+.grid-images{
+    width: 100%;
+    height: 100%;
+}
 .col {
     background-color: black;
 }
